@@ -353,6 +353,8 @@ body.theme-container .container {
 }
 
 iframe {
+  display: block;
+  overflow: auto;
   width: 100%;
   height: 100%;
   border: none;
