@@ -426,7 +426,7 @@
     </div>
   </div>
   <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-    <div class="panel panel-default">
+    <div class="panel">
       <div class="panel-heading">
         <h3 class="panel-title">Most Active Users</h3>
       </div>
