@@ -1,3 +1,7 @@
+# RC.13
+  - Fixed bug where .table-responsive on iOS (iphone 5) was causing the container to be pushed
+  to the width of the table, thus blowing out the menus
+
 # RC.12
   - Tweaked the Panel headers to be a bit more colorful
 
